# pds

./: README.md
HWA1/: matmatB.cpp  matmatL.cpp
HWA2/: CMakeLists.txt  README.md  allreduce.cpp  compile.sh  jobscript.sh
HWA3/: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp
HWA3/algorithms/central/: central.cpp  central.h
HWA3/algorithms/raymond/: raymond.cpp  raymond.h
HWA3/algorithms/ring/: ring.cpp  ring.h
HWA3/csv/: csvfile.h
HWA3/results/: results.cpp  results.h
HWA4/: CMakeLists.txt  README.md
HWA4/pimontecarlo/: CMakeLists.txt  pimontecarlo.cpp
HWA4/prodcons/: prodcons.cpp
HWA4/threadsum/: threadsum.cpp
HWA4_gotten/: README.md  pimontecarlo.cpp  prodcons.cpp  threadsum.cpp
HWA4_gotten/pimontecarlo/: pimontecarlo.cpp
HWA4_gotten/prodcons/: CMakeLists.txt  prodcons.cpp
HWA4_gotten/threadsum/: CMakeLists.txt  threadsum.cpp
HWA5/: CMakeLists.txt  README.md  changroberts.cpp  compile.sh  franklin.cpp
HWA5/include/: changroberts.hpp  franklin.hpp  process.hpp
HWA5/src/: changroberts.cpp  franklin.cpp  main.cpp
